<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_main"
    android:padding="10dp">

    <RadioGroup
        android:id="@+id/rgTheme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RadioButton
            android:id="@+id/rbSystem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/system"
            android:buttonTint="@color/white"
            android:textStyle="bold"
            android:textColor="@color/white"/>

        <RadioButton
            android:id="@+id/rbLight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/light"
            android:buttonTint="@color/white"
            android:textStyle="bold"
            android:textColor="@color/white"/>

        <RadioButton
            android:id="@+id/rbDark"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dark"
            android:buttonTint="@color/white"
            android:textStyle="bold"
            android:textColor="@color/white"/>

    </RadioGroup>

</androidx.constraintlayout.widget.ConstraintLayout>