<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_main">

    <ImageView
        android:id="@+id/ivBack"
        android:layout_width="30dp"
        android:layout_height="30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_back"
        android:clickable="true"
        android:focusable="true"
        android:layout_marginTop="12dp"
        android:layout_marginStart="20dp" />

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/settings"
        android:textStyle="bold"
        android:textSize="25sp"
        android:textColor="@color/white"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider"
        android:layout_marginTop="12dp"
        app:layout_constraintTop_toBottomOf="@id/tvTitle"/>

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/divider"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_margin="20dp">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@drawable/bg_settings"
            android:layout_margin="10dp">

            <LinearLayout
                android:id="@+id/llAppTheme"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="2"
                android:paddingVertical="10dp"
                android:paddingHorizontal="20dp"
                android:clickable="true"
                android:focusable="true">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/app_theme"
                    android:textColor="@color/white"
                    android:textAlignment="textStart"
                    android:textSize="16sp"
                    android:layout_weight="1"/>

                <TextView
                    android:id="@+id/tvThemeName"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/system"
                    android:textColor="@color/white"
                    android:textAlignment="textStart"
                    android:textSize="16sp"
                    android:layout_weight="1"/>

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    app:srcCompat="@drawable/ic_double_arrow_right" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="?android:attr/listDivider" />

            <LinearLayout
                android:id="@+id/llUnitsOfMeasure"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="2"
                android:paddingVertical="10dp"
                android:paddingHorizontal="20dp"
                android:clickable="true"
                android:focusable="true">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/unit"
                    android:textColor="@color/white"
                    android:textAlignment="textStart"
                    android:textSize="16sp"
                    android:layout_weight="1"/>

                <TextView
                    android:id="@+id/tvUnitsOfMeasureName"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/centigrade"
                    android:textColor="@color/white"
                    android:textAlignment="textStart"
                    android:textSize="16sp"
                    android:layout_weight="1"/>

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    app:srcCompat="@drawable/ic_double_arrow_right" />

            </LinearLayout>

        </LinearLayout>

    </ScrollView>



</androidx.constraintlayout.widget.ConstraintLayout>